--- a/public/stylesheets/ideas.less
+++ b/public/stylesheets/ideas.less
@@ -335,6 +335,7 @@ span.countdown_row {
 .slide {
   float: left; position: relative; clear: left; margin-top: -20px; display:none;
   .btn { float: left; position: relative; clear: left; margin: 0 0 20px 20px; font-size: 11px; }
+  .edit { float: left; position: relative; clear: none; margin: 0 0 0 5px; }
 }
 
 #new-idea form .clearfix {
@@ -426,3 +427,54 @@ label.error {
   width: 100%;
   text-align: left;
 }
+
+
+
+
+.entry.edit {
+
+  .edit-title {
+    margin: 20px 0 0 20px;
+    float: left;
+    position: relative;
+    display: block;
+    color: @gray;
+  }
+    
+  h1 {
+    clear: left;
+    margin-bottom: 0;
+  }
+  
+  .input { 
+    float: left;
+    position: relative;
+    clear: left;
+    margin: 0;
+  }
+  
+  #idea_title {
+    margin: 0 20px 15px 20px;
+    width: 470px;
+    clear: left;
+  }
+  
+  #idea_content {
+    width: 470px;
+    height: 400px;
+    float: left;
+    position: relative;
+    clear: left;
+    margin: 0 0 15px 20px;
+    left: 0;
+  }
+  
+  .submit {
+    float: right;
+    position: relative;
+    clear: left;
+    margin: 0 20px 0 0;
+  }
+  
+}
+
