--- a/ideas/index.html.liquid
+++ b/ideas/index.html.liquid
@@ -18,12 +18,15 @@
         <div class="content">
         {{ idea.content | markdown }}
         </div>
-        <a href="{{idea.permalink}}" title="permalink for {{%idea.title%}}" class="btn">go to page for this idea</a>
+        <a href="{{idea.permalink}}" title="permalink for {{%idea.title%}}" class="btn">go to page for this {{theme.idea_context}}</a>
+        {% if idea.user.uuid == current_user.uuid %}
+        <a href="{{idea.permalink}}/edit" title="link to edit {{idea.title}}" class="edit btn">edit {{theme.idea_context}}</a>
+        {% endif %}
       </div>
 
     {% if idea.interested_users != empty %}
     <div class="interest">
-      <h3>people interested in this:</h3>
+      <h3>people interested in this {{theme.idea_context}}:</h3>
       <ul class="interested-people">
       {% for user in idea.interested_users %}
         <li><a href="{{ user.profile_url }}" title="{{ user.nickname }}'s {{ user.provider }} profile"><img src="{{ user.image_url }}" alt="{{ user.nickname }}" width="40" height="40" class="avatar" /></a></li>
@@ -38,15 +41,15 @@
       <div class="actions">
         <ul>
           {% if idea.liked? %}
-          <li class="first"><span class="action-like on">like <strong>({{ idea.likes }})</span></li>
+          <li class="first"><span class="action-like on">{{theme.idea_context}} <strong>({{ idea.likes }})</strong></span></li>
           {% else %}
-          <li class="first"><div class="action-like" the_link="{{idea.like_link}}"> Like <strong class="likecount">({{idea.likes}})</strong></div></li>
+          <li class="first"><div class="action-like" the_link="{{idea.like_link}}"> {{theme.like_context}} <strong class="likecount">({{idea.likes}})</strong></div></li>
           {% endif %}
           <li class="last"><a href="{{ idea.permalink }}#comments" title="link to comments for {{idea.title}}" class="action-discuss">discuss <strong>({{ idea.comments_count }})</strong></a></li>
         </ul>
       </div>
     </div>
-    <span class="comment-count"><a href="{{idea.like_link}}" data-method="post">{{ idea.likes }}</a><br /><span class="like-label">likes</span></span>
+    <span class="comment-count"><a href="{{idea.like_link}}" data-method="post">{{ idea.likes }}</a><br /><span class="like-label">{{theme.likes_context}}</span></span>
     </div>
 
   {% endfor %}
@@ -55,9 +58,9 @@
   <div class="empty">
     <h1>Nobody has posted anything here yet!</h1>
     {% if current_user %}
-    <p>be the first to add an idea by using the 'add a new idea' button</p>
+    <p>be the first to add a {{theme.idea_context}} by using the 'add a new idea' button</p>
     {% else %}
-    <p>login with twitter or facebook to be the first to add an idea</p>
+    <p>login with twitter or facebook to be the first to add a {{theme.idea_context}}</p>
     {% endif %}
   </div>
 
