--- a/ideas/index.html.liquid
+++ b/ideas/index.html.liquid
@@ -41,7 +41,7 @@
       <div class="actions">
         <ul>
           {% if idea.liked? %}
-          <li class="first"><span class="action-like on">{{theme.idea_context}} <strong>({{ idea.likes }})</strong></span></li>
+          <li class="first"><span class="action-like on">{{theme.like_context}} <strong>({{ idea.likes }})</strong></span></li>
           {% else %}
           <li class="first"><div class="action-like" the_link="{{idea.like_link}}"> {{theme.like_context}} <strong class="likecount">({{idea.likes}})</strong></div></li>
           {% endif %}
