--- a/ideas/index.html.liquid
+++ b/ideas/index.html.liquid
@@ -3,7 +3,7 @@
   <div id="filters">
     <span class="filter-label">Show:</span>
     <ul>
-      <li><a href="/" class="all {% if filter == "own" %}{% else %}{% if sort == "like" %}{% else %}active{% endif %}{% endif %}" title="show all entries">All</a></li>
+      <li><a href="{{space.permalink}}" class="all {% if filter == "own" %}{% else %}{% if sort == "like" %}{% else %}active{% endif %}{% endif %}" title="show all entries">All</a></li>
       {% if current_user %}<li><a href="?filter=own" class="mine {% if filter == "own" %}active{% endif %}" title="show my entries">Mine</a></li>{% endif %}
       <li><a href="?sort=like" class="popular {% if sort == "like" %}active{% endif %}" title="show popular entries">Popular</a></li>
     </ul>
