--- a/public/stylesheets/ideas.less
+++ b/public/stylesheets/ideas.less
@@ -412,15 +412,48 @@ padding: 5px 15px;
 top: -38px;
 }
 
-#filters { width: 492px; float: left; position: relative; margin: 0 0 20px 0; padding: 7px 14px; #gradient > .vertical-three-colors(#ffffff, #ffffff, 25%, darken(#ffffff, 10%)); border: 1px solid darken(@neutral, 10%); .border-radius(3px); font-size: .85em;
-  .filter-label { float: left; position: relative; margin: 0 10px 0 0; color: @gray; }
-  ul { margin: 0; padding: 0; list-style-type: none;
-    li { float: left; position: relative; margin: 0 5px 0 0; 
-      a { padding: 3px 7px 4px 20px; .border-radius(4px);
-        &.all { background: url(../images/icon-all.png) 5px center no-repeat; }
-        &.mine { background: url(../images/icon-mine.png) 6px center no-repeat; } 
-        &.popular { background: url(../images/icon-popular.png) 6px center no-repeat; }
-        &.active, &:hover { .box-shadow(inset 0 0 4px darken(@grayLight, 7%); }}}}
+#filters {
+  width: 492px;
+  float: left;
+  position: relative;
+  margin: 0 0 20px 0;
+  padding: 7px 14px;
+  #gradient > .vertical-three-colors(#ffffff, #ffffff, 25%, darken(#ffffff, 10%));
+  border: 1px solid darken(@neutral, 10%);
+  .border-radius(3px);
+  font-size: .85em;
+  .filter-label {
+    float: left;
+    position: relative;
+    margin: 0 10px 0 0;
+    color: @gray;
+  }
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    li {
+      float: left;
+      position: relative;
+      margin: 0 5px 0 0; 
+      a {
+        padding: 3px 7px 4px 20px;
+        .border-radius(4px);
+        &.all {
+          background: url(../images/icon-all.png) 5px center no-repeat;
+        }
+        &.mine {
+          background: url(../images/icon-mine.png) 6px center no-repeat;
+        } 
+        &.popular {
+          background: url(../images/icon-popular.png) 6px center no-repeat;
+        }
+        &.active, &:hover {
+          .box-shadow(inset 0 0 4px darken(@grayLight, 7%));
+        }
+      }
+    }
+  }
   .rss { float: right; position: relative; padding-left: 20px; background: url(../images/icon-feed.png) 6px center no-repeat; }
 }
 
@@ -491,3 +524,23 @@ label.error {
         background: url(../images/button-like.png) 0 2px no-repeat;cursor: default;
     }
 }
+
+#emailCaptureModal {
+  width: 340px;
+  background: #fff;
+  border-radius: 3px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.7);
+  position: fixed;
+  top: 150px;
+  left: 50%;
+  margin: 0 0 0 -200px;
+  padding: 30px 30px 0 30px;
+  text-align: center;
+}
+
+.modal-cover {
+  position: fixed;
+  top: 0; right: 0; bottom: 0; left: 0;
+  background: rgba(0,0,0,0.7);
+}
+
